Fix Issue #9752: MSVC compiler warning due to undefined function (Patch by Jon Anglin)